# vscpl2drv-tcpipsrv

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  Makefile.in  README.md  VERSION.m4  build-unix.sh  build-windows.bat  build_debian_package.sh  config.h  config.h.in  configure  configure.ac
.github/workflows/: build.yml  cmake.yml  cmake_cross_platform_build.yml
cmake/: version.h.in
debian_orig/: README.Debian  README.source  changelog  control  copyright  install  links  rules  shlibs
debug/: conf_standard.json  conf_standard.xml  users.json
debug/linux/: save.vscpd.xml  tcpipsrv.json  vscpd.json  vscpd.xml
docs/: README.md  _coverpage.md  _sidebar.md  build.md  configure.md  history.md  index.html  install.md  links.md  self_signed_server_certificates.md  using.md  variables.xml  windows-semaphore-guide.md
docs/images/: vscpl2drv-tcpipsrv.xmind
forms/: index.html
forms/settings/: form.html
install-files/: vscpl2drv-tcpiplink.conf
linux/: .gitignore  Makefile  Makefile.in  srv.cpp  tcpipsrv.cpp  tcpipsrv.h  userlist.h  vscpl2drv-tcpipsrv.cpp  vscpl2drv-tcpipsrv.h
man/: .gitignore  CMakeLists.txt  make_man_pages  vscpl2drv-tcpiplink.1  vscpl2drv-tcpiplink.1.md  vscpl2drv-tcpipsrv.1  vscpl2drv-tcpipsrv.1.md
resources/: vscp.key
resources/linux/: tcpipsrv.json
resources/nsis/: NSIS.template.in
src/: .gitignore  clientlist.cpp  clientlist.h  config.h.in  controlobject.cpp  controlobject.h  srv.cpp  srv.h  tcpipsrv.cpp  tcpipsrv.h  test.cpp  userlist.cpp  userlist.h  version.h  vscpl2drv-tcpipsrv.cpp  vscpl2drv-tcpipsrv.h
testapp/: CMakeLists.txt  README.md  main.cpp
windows/: tcpiplinkdrv.cpp  tcpiplinkdrv.h
